WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189531
[Curl] WebInspector doesn't display request headers added during processing.
https://bugs.webkit.org/show_bug.cgi?id=189531
Summary
[Curl] WebInspector doesn't display request headers added during processing.
Basuke Suzuki
Reported
2018-09-11 16:53:52 PDT
While processing the request, Curl port network layer adds some headers to the request such as cookies. Those headers should be displayed in the WebInspector.
Attachments
PATCH
(3.00 KB, patch)
2018-09-11 16:58 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2018-09-11 16:58:24 PDT
Created
attachment 349494
[details]
PATCH
WebKit Commit Bot
Comment 2
2018-09-11 19:42:42 PDT
Comment on
attachment 349494
[details]
PATCH Clearing flags on attachment: 349494 Committed
r235928
: <
https://trac.webkit.org/changeset/235928
>
WebKit Commit Bot
Comment 3
2018-09-11 19:42:44 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2018-09-11 19:43:21 PDT
<
rdar://problem/44367736
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug