[Curl] WebInspector doesn't display request headers added during processing. https://bugs.webkit.org/show_bug.cgi?id=189531

Reviewed by Alex Christensen.

While processing the request, Curl port network layer adds some headers to the request
such as cookies. Those headers should be displayed in the WebInspector.

Tested on MiniBrowser.

* platform/network/curl/CurlRequest.cpp:
(WebCore::CurlRequest::didReceiveHeader):
(WebCore::CurlRequest::didCompleteTransfer):
(WebCore::CurlRequest::updateNetworkLoadMetrics):
* platform/network/curl/CurlRequest.h:


Canonical link: https://commits.webkit.org/204509@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@235928 268f45cc-cd09-0410-ab3c-d52691b4dbfc